fix: invisible close btn in modal

--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -10,3 +10,7 @@
 	border: 2px solid $primary-light;
 	box-shadow: 13px 14px rgba(90, 15, 60, 0.7);
 }
+
+.modal .modal-close {
+	background-color: rgba(255, 255, 255, 0.2);
+}
